27_matrix_input/grade.txt
Grading at Thu Jul 16 02:01:23 UTC 2020
Attempting to compile rotateMatrix.c
rotateMatrix.c: In function ‘main’:
rotateMatrix.c:61:7: error: redefinition of ‘c’
   int c=fgetc(f);
       ^
rotateMatrix.c:32:7: note: previous definition of ‘c’ was here
   int c = fgetc(f);
       ^
The code did not compile!

Overall Grade: F
